--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -24,3 +24,20 @@
     transform translateX(120%)
     max-height 0
     padding 0
+
+.count-enter
+  transition all .25s
+  transform translateY(100%) //start off screen
+
+  &.count-enter-active
+    transform translateY(0) //put to regular spot
+
+.count-leave
+  transition all .25s
+  position: absolute
+  left 0
+  bottom 0
+  transform translateY(0) //start off screen
+
+  &.count-leave-active
+    transform translateY(-100%) //put to regular spot
